# brave-core

./: .eslintrc.js  .gitignore  DEPS  chromium_presubmit_config.json5  package-lock.json  package.json
android/: android_browser_tests.gni  brave_java_resources.gni  brave_java_sources.gni
android/java/: AndroidManifest.xml
app/: BUILD.gn  brave_settings_strings.grdp  command_utils.cc  command_utils.h
browser/: BUILD.gn  about_flags.cc  brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_local_state_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/android/: BUILD.gn
browser/android/speedreader/: BUILD.gn  features.cc  features.h  speedreader_utils.cc  speedreader_utils.h
browser/brave_ads/: brave_stats_helper.cc  brave_stats_helper_browsertest.cc  sources.gni
browser/brave_stats/: brave_stats_updater.cc  brave_stats_updater.h  brave_stats_updater_unittest.cc  first_run_util.cc  first_run_util.h
browser/brave_vpn/dns/: brave_vpn_dns_observer_service_win.cc  brave_vpn_dns_observer_service_win.h
browser/brave_wallet/: solana_provider_renderer_browsertest.cc
browser/content_settings/: brave_content_settings_registry_unittest.cc
browser/ephemeral_storage/: ephemeral_storage_browsertest.cc  ephemeral_storage_browsertest.h  ephemeral_storage_forget_by_default_browsertest.cc
browser/ntp_background/: ntp_p3a_helper_impl.cc  ntp_p3a_helper_impl.h  ntp_p3a_helper_impl_unittest.cc  view_counter_service_factory.cc
browser/playlist/test/: playlist_browsertest.cc  playlist_download_request_manager_browsertests.cc  playlist_service_unittest.cc
browser/search_engines/: normal_window_search_engine_provider_service.cc  normal_window_search_engine_provider_service.h  search_engine_provider_service_factory.cc  search_engine_provider_util.cc
browser/speedreader/: speedreader_tab_helper.cc
browser/tor/: BUILD.gn
browser/ui/: BUILD.gn  brave_shields_data_controller.cc  brave_shields_data_controller.h  browser_commands.cc
common/: BUILD.gn
components/brave_federated/: communication_adapter.cc
components/commander/common/: BUILD.gn  commander_frontend_delegate.cc  commander_frontend_delegate.h  commander_model.cc  commander_model.h  commander_url.cc  commander_url.h  commander_url_unittest.cc  constants.h  features.cc  features.h
components/commands/browser/: BUILD.gn
components/commands/browser/resources/: commands.html  commands.tsx
components/commands/browser/resources/components/: Command.tsx
components/commands/browser/resources/utils/: accelerator.ts  match.ts
components/commands/common/: BUILD.gn  commands.mojom  features.cc  features.h  key_names.cc  key_names.h
components/constants/: webui_url_constants.cc  webui_url_constants.h
components/ephemeral_storage/: ephemeral_storage_service.h
components/futures/: BUILD.gn  future.h  future_join.h  future_join_unittest.cc  future_unittest.cc  shared_future.h  shared_future_unittest.cc  shared_promise.h  shared_promise_unittest.cc
components/misc_metrics/: general_browser_usage.h
components/p3a/: brave_p3a_log_store.cc  brave_p3a_message_manager.cc  brave_p3a_message_manager.h  brave_p3a_metric_log_store.cc  brave_p3a_metric_log_store.h  brave_p3a_scheduler.h  brave_p3a_service.cc  brave_p3a_service_unittest.cc  brave_p3a_uploader.h  metric_names.h
components/resources/: BUILD.gn  brave_components_resources.grd  brave_shields_strings.grdp  wallet_strings.grdp
components/shortcuts/browser/resources/: BUILD.gn  shortcuts.html  shortcuts.tsx  shortcuts_resources.grdp
components/shortcuts/browser/resources/components/: Command.tsx
components/shortcuts/common/: BUILD.gn  key_names.cc  key_names.h  modifier_names.cc  modifier_names.h  shortcuts.mojom
patches/: chrome-browser-resources-settings-router.ts.patch  components-history-core-browser-sync-typed_url_sync_bridge_unittest.cc.patch
resources/: resource_ids.spec
test/: BUILD.gn
test/base/: testing_brave_browser_process.cc  testing_brave_browser_process.h
(+141 files in other folders)
