# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//build/config/android/rules.gni")

source_set("speedreader") {
  sources = [
    "features.cc",
    "features.h",
    "speedreader_utils.cc",
    "speedreader_utils.h",
  ]

  deps = [
    "//base",
    "//brave/build/android:jni_headers",
    "//chrome/browser",
    "//content/public/browser",
  ]
}
