# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("common") {
  sources = [
    "commander_frontend_delegate.cc",
    "commander_frontend_delegate.h",
    "commander_model.cc",
    "commander_model.h",
    "commander_url.cc",
    "commander_url.h",
    "constants.h",
    "features.cc",
    "features.h",
  ]

  deps = [
    "//base",
    "//ui/gfx",
    "//url"
  ]
}

source_set("unittests") {
  testonly = true

  sources = [
    "commander_url_unittest.cc"
  ]

  deps = [
    ":common",
    "//testing/gtest",
  ]
}
