# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//mojo/public/tools/bindings/mojom.gni")

static_library("common") {
  sources = [
    "key_names.cc",
    "key_names.h"
  ]

  deps = [
    "//base",
    "//ui/events:event_constants",
    "//ui/events:events_base"
  ]

  public_deps = [
    ":mojom"
  ]
}

mojom("mojom") {
  sources = [ "commands.mojom" ]
  public_deps = [
    "//mojo/public/mojom/base"
  ]
}
