# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//mojo/public/tools/bindings/mojom.gni")

static_library("common") {
  sources = [
    "modifier_names.cc",
    "modifier_names.h"
  ]

  deps = [
    "//base",
  ]
}

mojom("mojom") {
  sources = [ "shortcuts.mojom" ]
  public_deps = [
    "//mojo/public/mojom/base"
  ]
}
